# the_village_shop

./: .gitignore  CMakeLists.txt  README.md
automation/: test_client_server.sh
client/: CMakeLists.txt
client/src/: main.cpp
client/src/TimeManagement/: TimeManager.cpp
server/: CMakeLists.txt
server/src/: main.cpp
